<resources>
    <string name="app_name">Treadmate</string>
    <!-- Menu related strings !-->
    <string name="menu_home">Home</string>
    <string name="menu_run">Just Run</string>
    <string name="menu_choosewo">Choose Workout</string>
    <string name="menu_account">My Account</string>
    <string name="menu_login">Login</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_connect">My Connections</string>
    <string name="menu_hr_connect">My HR sensor</string>
    <string name="menu_treadmill_connect">My Treadmill</string>
    <string name="menu_hr_connected">HR connected</string>
    <string name="menu_treadmill_connected">Treadmill connected</string>
    <string name="menu_hr_disconnected">Connect HR</string>
    <string name="menu_treadmill_disconnected">Connect Treadmill</string>
    <string name="menu_close">Close navigation drawer</string>
    <string name="menu_open">Open navigation drawer</string>
    <string name="userprofile_name">Name</string>
    <string name="userprofile_email">Email</string>
    <!-- Home screen related strings !-->
    <string name="welcome">Welcome to</string>
    <string name="slogan">Your best mate for treadmill running</string>
    <!-- Scan for treadmill related strings !-->
    <string name="scan">Find treadmill</string>
    <string name="devices_info">No treadmills found!</string>
    <!-- Run activity related strings !-->
    <string name="success">Success</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="total_distance">Distance (m): </string>
    <string name="speed_kmh">Speed (km/h)</string>
    <string name="inclination_text">Inclination (%)</string>
    <string name="heart_rate_text">Heart rate (bpm)</string>
    <string name="notifications_enabled">Notifications enabled</string>
    <string name="service_not_found">Service not found</string>
    <string name="connecting">Connecting…</string>
    <string name="connecting_hr">…</string>
    <string name="load_workout">Load workout</string>
    <string name="new_workout">New workout</string>
    <string name="controls_title">Controls</string>
    <string name="init_incl">0.0 %</string>
    <string name="init_speed">0.0 km/h</string>
    <string name="speed_title">Speed</string>
    <string name="inclination_title">Inclination</string>
    <string name="disconnect_action">Disconnect treadmill</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="connect_hr_sensor">Connect HR sensor</string>
    <!-- Track tab related strings !-->
    <string name="add_step">Add step</string>
    <string name="delete_step">Delete step</string>
    <string name="save_workout">Save workout</string>
    <string name="workout_name">Workout Name</string>
    <string name="duration">Duration (mins)</string>
    <string name="speed">Speed (km/h)</string>
    <string name="incl">Inclination (%)</string>
    <!-- HR tab related strings !-->
    <string name="max_hr_bpm">Max HR (BPM) </string>
    <string name="max_hr">My max HR is </string>
    <string name="at_speed"> at </string>
    <string name="hr_zone">HR Zone</string>
    <string name="save">Save</string>
    <string name="max_hr_ok">Get my HR zones</string>
    <!-- ScanHRActivity related strings !-->
    <string name="scan_button_ongoing">Scanning…</string>
    <string name="scan_fail">No HR sensors found!</string>
    <string name="scan_start">Scan for Bluetooth HR sensors</string>
    <string name="scan_button">Scan HR sensor</string>
    <!-- HeartRateActivity related strings !-->
    <string name="unreachable">Error handling data, please try again</string>
    <string name="unrecognized">Unrecognized data</string>
    <string name="heart_rate">Heart rate</string>
    <string name="no_device">No device</string>
    <string name="no_data">-</string>
    <!-- WorkoutActivity related strings !-->
    <string name="workout_tab_1">HR workout</string>
    <string name="workout_tab_2">Track workout</string>
    <!-- ConnectedActivity related strings !-->
    <string name="connected_tab_1">Controls</string>
    <string name="connected_tab_2">Stats</string>
    <string name="max_hr_description">I have run a MaxHR test and can confirm my maximum measured HR at maximal speed is:</string>
</resources>