<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_start"
            android:icon="@drawable/ic_baseline_directions_run_24"
            android:title="@string/menu_start" />
    </group>

    <item android:title="@string/menu_account">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_login"
                    android:icon="@drawable/ic_baseline_login_24"
                    android:title="@string/menu_login" />
                <item
                    android:id="@+id/menu_profile"
                    android:icon="@drawable/ic_baseline_person_24"
                    android:title="@string/menu_profile" />

                <item
                    android:id="@+id/menu_logout"
                    android:icon="@drawable/ic_baseline_logout_24"
                    android:title="@string/menu_logout" />
            </group>
        </menu>
    </item>

</menu>