<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/new_workout"
        android:orderInCategory="1"
        android:title="@string/new_workout"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/load_workout"
        android:orderInCategory="2"
        android:title="@string/load_workout"
        app:showAsAction="never" />
    <item
        android:id="@+id/disconnect"
        android:orderInCategory="3"
        android:title="@string/disconnect_action"
        app:showAsAction="never" />
    <item
        android:id="@+id/connect_hr_sensor"
        android:orderInCategory="4"
        android:title="@string/connect_hr_sensor"
        app:showAsAction="never" />
</menu>